# ai_researcher

./: .env  .gitignore  ai_researcher.py  ai_researcher_2.py  arxiv_tool.py  pyproject.toml  read_pdf.py  write_pdf.py
output/: paper_20250925_201130.tex
